--- a/project.html
+++ b/project.html
@@ -8,7 +8,7 @@
     </head>
     <body>
        <center></center> <h1 style="color:rgb(63, 165, 42);">Welcome</h1><br>
-       <a href="home.html"style="color:red;">HOME    </a> <br>  
+       <a href="Home.html"style="color:red;">HOME    </a> <br>  
        <a href="about.html"style="color:green;">ABOUT </a><br>
        <a href="CONTACT.html"style="color:black;">CONTACT</a> <br>
     
